fix table strings wrapping

--- a/source/_static/globals.css
+++ b/source/_static/globals.css
@@ -1,3 +1,9 @@
 div.social_doc > a {
   margin-right: 20px;
 }
+
+/* override table no-wrap */
+.wy-table-responsive table td,
+.wy-table-responsive table th {
+  white-space: normal;
+}
